plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'vpn'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Web для REST API
    implementation 'org.springframework.boot:spring-boot-starter-web'
    
    // DevTools для hot-reload в режиме разработки
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    
    // Lombok для упрощения кода
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Gson для работы с JSON конфигами Xray
    implementation 'com.google.code.gson:gson:2.10.1'
    
    // ZXing для генерации QR кодов
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'
    
    // Tarantool connector
    implementation 'io.tarantool:cartridge-driver:0.13.0'
    
    // Валидация
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
